# tock

arch/rv32i/src/: lib.rs  support.rs
boards/: Makefile.common
boards/jclulow/: Cargo.toml  Makefile  chip_layout.ld
boards/jclulow/src/: io.rs  main.rs
boards/nordic/nrf52dk_base/src/: lib.rs
boards/opentitan/src/: alarm_test.rs  main.rs
capsules/src/test/: alarm.rs
chips/: README.md
chips/e310x/src/: chip.rs  lib.rs
chips/ibex/src/: chip.rs  lib.rs  timer.rs
chips/jclulow1/: Cargo.toml
chips/jclulow1/src/: chip.rs  ioarea.rs  lib.rs
chips/lowrisc/src/: gpio.rs  uart.rs
